[tool.poetry]
name = "suntorybot"
version = "0.1.0"
description = ""
authors = ["Desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
